styles.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
}

/*
    2. Remove default margin
  */
* {
  margin: 0;
}

/*
    3. Allow percentage-based heights in the application
  */
html,
body {
  height: 100%;
  scroll-behavior: smooth;
}

/*
    Typographic tweaks!
    4. Add accessible line-height
    5. Improve text rendering
  */
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

/*
    6. Improve media defaults
  */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/*
    7. Remove built-in form typography styles
  */
input,
button,
textarea,
select {
  font: inherit;
}

/*
    8. Avoid text overflows
  */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/*
    9. Create a root stacking context
  */
#root,
#__next {
  isolation: isolate;
}

a{
   text-decoration: none;
   color: white;
}

body{
   background-color: lightgrey;
}

li{
  list-style-type: none;
}





/* 

Navbar 

*/

.nav__container{
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.navbar__img--wrapper{
  width: 20%;
  padding-left: 42px;
  padding-top: 12px;
}

.navbar__img{
  border: 1px solid black;
  border-radius: 12px;
}

.nav__list{
  display: flex;
  gap: 3rem;
  margin-right:42px;
}

.nav__link{

}

/* 

Nav background img

*/

.background__img{
  position: fixed;
  opacity: .8;
  background-size: cover;
  background-repeat: no-repeat;
  width: 100%;
  height: 100vh;
  z-index: -1;
}

/* 

Loading state

*/
.loader{
  width: 30px;
  height: 30px;
  position: absolute;
  top: 50%;
  left: 50%;                       
  border: 4px solid #Fff;
  animation: loader 2s infinite ease;
  display: none;
}

.loader.show{
  display: block;
}

@keyframes loader {
  0% { transform: rotate(0deg);}
  25% { transform: rotate(180deg);}
  50% { transform: rotate(180deg);}
  75% { transform: rotate(360deg);}
  100% { transform: rotate(360deg);}
}

@keyframes loader-inner {
  0% { height: 0%;}
  25% { height: 0%;}
  50% { height: 100%;}
  75% { height: 100%;}
  100% { height: 0%;}
}
/* 

Search Bar

*/

.search__container{
  display: flex;
  justify-content: center;
  margin-top: 30px;
}

.search__bar{
   color: white;
   border-radius: 24px;
   background-color: transparent;
   text-align: center;
   border: 1px solid black;
   padding: 0 60px 0px 60px;
}

.search__btn{
   color: white;
   border-radius: 24px;
   background-color: black;
   text-align: center;
   border: transparent;
   
}

.btn{
   color: white;
   border-radius: 24px;
   background-color: transparent;
   text-align: center;
   border: 1px solid black;
   margin-left: 12px;
   padding: 0 12px 0 12px;
   font-size: 15px;
}

.btn:hover{
  cursor: pointer;
}

.btn:active{
  transform: scale(0.9);
}

/* 

Movies

*/

.posts{
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 12px;
}

.info__wrapper{
  text-align: center;
  padding-top: 2rem;
}

.movie__title{
 font-size: .5rem;
 padding-top: .8rem;
 color: white;
}

.movie__rating{
 display: flex;
 justify-content: center;
 gap: .5rem;
 color: white;
}

.movie__poster{
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 75%;
}

.poster{
  border:1px solid black;
  border-radius: 12px;
}

